k8s/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: php

spec:
  replicas: 1

  selector:
    matchLabels:
      app: php

  template:
    metadata:
      labels:
        app: php

    spec:
      containers:
        - name: php
          image: elendumir/devops-pet-php:latest

          ports:
            - containerPort: 9000
