k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
        - name: mysql
          image: mysql:5.7

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: mysql-initdb
          configMap:
            name: mysql-initdb

---

apiVersion: v1
kind: Service

metadata:
  name: mysql-service

spec:
  selector:
    app: mysql

  ports:
    - port: 3306
      targetPort: 3306
