k8s/php-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: php-service

spec:
  selector:
    app: php

  ports:
    - port: 9000
      targetPort: 9000
