k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-pet-ingress

spec:
  ingressClassName: traefik
  
  rules:
    - host: www.5va6np.realhost-free.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
